--- a/TurnOnLightWithSwitch/MainWindow.xaml
+++ b/TurnOnLightWithSwitch/MainWindow.xaml
@@ -6,7 +6,42 @@
         xmlns:local="clr-namespace:TurnOnLightWithSwitch"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Canvas>
+        <ToggleButton Name="ToggleButton" Height="18" Width="20" Canvas.Left="483" Canvas.Top="244" />
+
+        <Image Canvas.Left="255" Visibility="Visible" Canvas.Top="110">
+            <Image.Style>
+                <Style TargetType="{x:Type Image}">
+                    <Setter Property="Source" Value="Images/12-LightOFF.bmp"></Setter>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=ToggleButton, Path=IsChecked}" Value="True">
+                            <Setter Property="Source" Value="Images/12-LightON.bmp"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Image.Style>
+        </Image>
+        <Image Source="Images/12-LightON.bmp" Canvas.Left="255" Visibility="Hidden" Canvas.Top="110"></Image>
+        <Image Source="Images/12-SwitchUp.bmp" Canvas.Left="364" Visibility="Visible" Canvas.Top="222"></Image>
+        <Image  Source="Images/12-SwitchDown.bmp" Canvas.Left="364" Canvas.Top="222" Visibility="Hidden"></Image>
+
+        <Polyline
+            Points="385,280 385,310 150,310 150,150 0,150"
+            Stroke="Black"
+            StrokeThickness="4" />
+
+        <Polyline 
+            Points="0,130 180,130 180,200 292,200 295,180"
+            Stroke="Black"
+            StrokeThickness="4"
+        />
+
+        <Polyline 
+            Points="400,210 400,225 400,200 303,200 302,180"
+            Stroke="Black"
+            StrokeThickness="4"
+        />
+
+
+    </Canvas>
 </Window>
